# poppler-jni

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.gradle  generate_headers.sh  settings.gradle
src/main/cpp/: edu_illinois_library_poppler_PopplerDocument.cpp  edu_illinois_library_poppler_PopplerDocument.h  edu_illinois_library_poppler_PopplerPage.cpp  edu_illinois_library_poppler_PopplerPage.h  edu_illinois_library_poppler_PopplerPageRenderer.cpp  edu_illinois_library_poppler_PopplerPageRenderer.h  handle.h  util.h
